<resources>
    <string name="app_name">Hopara</string>

    <!-- descriptive text strings -->
    <string name="main_story">
        Within the boundaries of Hamilton lie several significant historic Maori sites.
        These sites range in type from Pa, Urupa, and Papakainga.  The majority of these sites
        were constructed by the people of Ngati Wairere or its sub-tribes.  Many of the sites are
        in close proximity to the Waikato river and Hamilton CBD, and are either designated as
        parks or reserves.  Some sites are currently occupied by buildings.  Pukete Pa is one
        example of a fortified Pa located at Braithwaite park, on the west bank of the waikato
        river at Pukete Road.  Another Major Pa site located within the Hamilton CBD on London
        street is Kirikiriroa Pa.
    </string>
    <string name="Pa">
        A pa is a fortified village where Maori Chiefs and Warriors lived.  It was a place of
        refuge when invading war parties came.  In general fortified Pa was constructed by
        levelling an area of ground. Holes were dug around the perimeter of the site and large,
        heavy, adzed wooden poles or split logs would be set close together with manuka stakes
        leaving a sufficient gap to allow spears to be thrust between them.
    </string>
    <string name="Papakainga">
        A Papakainga was an unfortified and undefended village or hamlet. In pre-European times
        Papakainga were associated with food production and storage and inhabited by the people
        involved in these processes.
    </string>
    <string name="Urupa">
        Urupa are burial grounds where bodies of tribe members were buried with elaborate
        ceremonies and rituals. Often the bodies were buried with items of personal adornment
        or greenstone artefacts.
    </string>

    <string name="pukete">
    Pukete was a fortified Pa, believed to have been constructed by Nga Iwi. Ngati Koura conquered
        the Nga Iwi inhabitants and took over the pa and surrounding lands.

    Pukete Pa was occupied by Ngati Koura under the leadership of Te Roore Tatangi when they
    abandoned the Pa prior to the land wars of 1863. However, by this time the wooden palisade
    fortifications of the Pa had disappeared only the ditch remained.
    </string>

    <string name="kirikiriroa">
    Kirikiriroa Pa is the most significant Pa within the Hamilton City area. It was a fully
        fortified Pa Whakairo (Pa with carved palisades). It was an half oval in shape with the
        riverbank as the flat side and the curved front stretching from London Street to
        Claudelands Road. The curved front was fortified by a ditch and mound structure
        with an elaborate wooden palisade atop the mound. Unfortunately, most of the surface
        features of the Kirikiriroa Pa site were destroyed during the early development of
        Hamilton City before they were accurately recorded or mapped.
    </string>


    <!-- button titles -->
    <string name="mapTitle">Maori Pa Map</string>
    <string name="TerminologyTitle">Terminology</string>
    <string name="PuketeTitle">Pukete Pa</string>
    <string name="KirikiriroaTitle">Kirikiriroa Pa</string>

    <!-- image descriptions -->
    <string name="imageTr">Te Roore Tatangi</string>
    <string name="imageKp">Kirikiriroa Pa Site Today</string>
    <string name="imageSplash">Hopara Pa Splash Image</string>

    <!-- activity titles -->
    <string name="title_activity_definition">Terminology</string>
    <string name="title_activity_pukete">Pukete Pa</string>
    <string name="title_activity_kirikiriroa">Kirikiriroa Pa</string>
    <string name="title_activity_pa_maps">Map</string>

    <string name="google_maps_key">AIzaSyD2leZPlLr5wwjZxGinlZS1-n3D4dKqVTE</string>
</resources>
