<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="waikato.ac.nz.hopara_android.MainScreenActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textViewStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_story"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="6dp" />


    <Button
        android:id="@+id/butMap"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:onClick="startMap"
        android:text="@string/mapTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStory" />

    <Button
        android:id="@+id/butTerminology"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="startDefinitions"
        android:text="@string/TerminologyTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butMap"
        tools:layout_editor_absoluteX="127dp"
        tools:textAlignment="center" />

    <Button
        android:id="@+id/butPukete"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="startPukete"
        android:text="@string/PuketeTitle"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butTerminology"
        tools:layout_editor_absoluteX="127dp" />

    <Button
        android:id="@+id/butKirikiriroa"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:onClick="startKirikiriroa"
        android:text="@string/KirikiriroaTitle"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butPukete"
        tools:layout_editor_absoluteX="127dp" />


</android.support.constraint.ConstraintLayout>
